--- a/UIEcomerce/src/app/layout/header/header.component.html
+++ b/UIEcomerce/src/app/layout/header/header.component.html
@@ -100,34 +100,27 @@
   <div class="hidden md:block border-t border-gray-100">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex space-x-8">
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Inicio</a>
-
-        <div class="relative group">
-          <button
-            class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium flex items-center border-b-2 border-transparent group-hover:border-indigo-600">
-            Categorías
-            <i class="fas fa-chevron-down ml-1 text-xs"></i>
-          </button>
-          <div class="absolute left-0 mt-0 w-56 bg-white rounded-md shadow-lg z-50 hidden group-hover:block">
-            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">Electrónica</a>
-            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">Moda</a>
-            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">Hogar</a>
-            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">Deportes</a>
-            <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">Juguetes</a>
-          </div>
-        </div>
-
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Ofertas</a>
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Nuevos</a>
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Marcas</a>
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Blog</a>
-        <a href="#"
-          class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">Contacto</a>
+        @for (item of menus$(); track $index) {
+          @if ( !item.HasSubMenu) {
+              <a href="{{ item.Url }}" class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium border-b-2 border-transparent hover:border-indigo-600">
+                {{ item.Name }}
+              </a>
+          }
+          @else {
+              <div class="relative group">
+                  <button
+                    class="py-3 px-1 text-gray-700 hover:text-indigo-600 font-medium flex items-center border-b-2 border-transparent group-hover:border-indigo-600">
+                    {{ item.Name }}
+                    <i class="fas fa-chevron-down ml-1 text-xs"></i>
+                  </button>
+                  <div class="absolute left-0 mt-0 w-56 bg-white rounded-md shadow-lg z-50 hidden group-hover:block">
+                    @for (subitem of item.SubMenu; track $index) {
+                        <a href="{{ subitem.Url }}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 hover:text-indigo-600">{{ subitem.Name }}</a>
+                    }
+                  </div>
+              </div>
+        }
+      }
       </div>
     </div>
   </div>
@@ -135,39 +128,28 @@
   <!-- Menú Móvil (oculto por defecto) -->
   <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
     <div class="px-2 pt-2 pb-3 space-y-1">
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Inicio</a>
-
-      <div class="relative">
-        <button onclick="this.nextElementSibling.classList.toggle('hidden')"
-          class="w-full flex justify-between items-center px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">
-          Categorías
-          <i class="fas fa-chevron-down text-xs"></i>
-        </button>
-        <div class="hidden pl-4">
-          <a href="#"
-            class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">Electrónica</a>
-          <a href="#"
-            class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">Moda</a>
-          <a href="#"
-            class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">Hogar</a>
-          <a href="#"
-            class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">Deportes</a>
-          <a href="#"
-            class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">Juguetes</a>
-        </div>
-      </div>
-
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Ofertas</a>
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Nuevos</a>
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Marcas</a>
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Blog</a>
-      <a href="#"
-        class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">Contacto</a>
+      @for (item of menus$(); track $index) {
+        @if ( !item.HasSubMenu ) {
+           <a href="{{ item.Url }}" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">
+            {{ item.Name }}
+          </a>
+        }
+         @else{
+          <div class="relative">
+            <button onclick="this.nextElementSibling.classList.toggle('hidden')"
+              class="w-full flex justify-between items-center px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-indigo-600 hover:bg-gray-50">
+              {{ item.Name }}
+              <i class="fas fa-chevron-down text-xs"></i>
+            </button>
+            <div class="hidden pl-4">
+              @for (subitem of item.SubMenu; track $index) {
+                <a href="{{ subitem.Url }}"
+                  class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:text-indigo-600 hover:bg-gray-50">{{ subitem.Name }}</a>
+              }
+            </div>
+          </div>
+        }
+      }
     </div>
   </div>
 </nav>
