Grand avance con las pantallas

--- a/UIEcomerce/src/app/auth/login/login.component.scss
+++ b/UIEcomerce/src/app/auth/login/login.component.scss
@@ -1,3 +1,36 @@
 .bg-primary-600 {
     background-color: rgb(159 161 204)!important;
 }
+// .try {
+//     position: relative;
+//     width: 250px;
+//     height: 350px;
+//     background: rgba(45, 45,45,1);
+//     overflow: hidden;
+//     border-radius: 7px;
+//     z-index: 1;
+// }
+
+// .try::before {
+//     content: '';
+//     position: absolute;
+//     background: radial-gradient(#01fe00, transparent);
+//     width: 200px;
+//     height: 200px;
+//     animation: animate 3s linear infinite;
+//     border-radius: 50%;
+//     top: 0;
+// }
+
+// input{
+//   width: 80%;
+//   padding: 10px;
+//   background-color: rgba(255, 255, 255, 0.1);
+//   border: 2px solid #626161;
+//   text-align: center;
+//   outline: none;
+//   caret-color: #fff;
+//   color:aliceblue;
+//   border-radius: 8px;
+//   margin-left: 20px;
+// }
