--- a/UIEcomerce/src/app/layout/header/header.component.html
+++ b/UIEcomerce/src/app/layout/header/header.component.html
@@ -153,3 +153,11 @@
     </div>
   </div>
 </nav>
+  <div class="flex flex-1 items-center justify-center  p-2">
+    <main class="flex-1 p-6 bg-gray-50 dark:bg-gray-900 overflow-auto width-full h-full">
+      <router-outlet>
+      </router-outlet>
+    </main>
+      <!-- <app-spinner/> -->
+  </div>
+
