--- a/UIEcomerce/src/app/features/checkout/checkout.component.html
+++ b/UIEcomerce/src/app/features/checkout/checkout.component.html
@@ -28,14 +28,14 @@
               <td class="px-4 py-3">{{item.qty}}</td>
               <td class="px-4 py-3 text-lg text-gray-900">{{item.price | currency}}</td>
               <td>
-                <button (click)="removeItem(item.id)"
+                <button (click)="removeItem(item.Id)"
                   class="flex px-2 text-white bg-orange-500 border-0 rounded focus:outline-none hover:bg-red-600">
                   X
                 </button>
               </td>
             </tr>
             }
-  
+
           </tbody>
           <tfoot>
             <tr>
