--- a/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
+++ b/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
@@ -51,7 +51,7 @@
 
         <!-- Cuerpo -->
         <tbody class="bg-white divide-y divide-gray-200">
-          @for (category of categories(); track category.id) {
+          @for (category of categories(); track category.Id) {
             <tr class="hover:bg-gray-50 transition-colors">
               <!-- Nombre -->
               <td class="px-6 py-4 whitespace-nowrap">
@@ -109,7 +109,7 @@
                     </svg>
                   </button>
                   <button
-                    (click)="deleteCategory(category.id)"
+                    (click)="deleteCategory(category.Id)"
                     class="text-red-600 hover:text-red-900 transition-colors"
                     title="Eliminar"
                   >
