--- a/UIEcomerce/src/app/auth/login/login.component.html
+++ b/UIEcomerce/src/app/auth/login/login.component.html
@@ -8,8 +8,8 @@
                 </h1>
                 <form class="space-y-4 md:space-y-6" action="#" [formGroup]="authForm" (ngSubmit)="Submit()" >
                     <div>
-                        <label for="UserName" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-                        <input type="text" name="UserName" id="UserName" formControlName="UserName" autocomplete="off" required  class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="email@company.com" required="">
+                        <label for="UserName" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Usuario</label>
+                        <input type="text" name="UserName" id="UserName" formControlName="UserName" autocomplete="off" required  class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="tu nombre de usuario" required="">
                     </div>
                     <div>
                         <label for="UserPass" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contraseña</label>
