--- a/UIEcomerce/src/styles.scss
+++ b/UIEcomerce/src/styles.scss
@@ -4,15 +4,45 @@
 @import 'ngx-toastr/toastr';
 
 .bg-primary-600 {
-    background-color: rgb(159 161 204)!important;
+  background-color: rgb(159 161 204) !important;
 }
 
 .showmodal {
-    display: flex !important;
-    opacity: 100 !important;
+  display: flex !important;
+  opacity: 100 !important;
 }
 
 .hiddenmodal {
-    display: none !important;
-    opacity: 0 !important;
+  display: none !important;
+  opacity: 0 !important;
+}
+
+[data-title]:hover:after {
+  opacity: 1;
+  transition: all 0.1s ease 0.5s;
+  visibility: visible;
+}
+
+[data-title]:after {
+  content: attr(data-title);
+  background-color: #333;
+  color: #fff;
+  font-size: 14px;
+  font-family: Raleway;
+  position: absolute;
+  padding: 3px 20px;
+  bottom: -1.6em;
+  right: -100%;
+  white-space: nowrap;
+  box-shadow: 1px 1px 3px #222222;
+  opacity: 0;
+  border: 1px solid #111111;
+  z-index: 99999;
+  visibility: hidden;
+  border-radius: 6px;
+
+}
+
+[data-title] {
+  position: relative;
 }
