Eliminar el scroll

--- a/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
+++ b/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
@@ -29,8 +29,8 @@
             <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las categoria diosponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
         </div>
 
-<div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden">
-  <div class="overflow-x-auto">
+<div class="bg-white rounded-lg shadow-sm border border-gray-200">
+  <div class=" overflow-hidden">
     <table class="min-w-full divide-y divide-gray-200">
       <!-- Encabezado -->
       <thead class="bg-gray-50">
