--- a/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
+++ b/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
@@ -101,7 +101,7 @@
             <div class="flex justify-center space-x-2">
 
               <button class="text-blue-600 hover:text-blue-900 transition-colors" data-title="Agregar subcategoria"
-                data-modal-target="popup-modal-category" (click)="showModalCreateCategory(category.Id,'Subcategoría')">
+                data-modal-target="popup-modal-subcategory" (click)="showModalCreateCategory(category.Id,'Subcategoría',category.Name)">
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </button>
               <button
@@ -184,6 +184,141 @@
               </button>
             </div>
           </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sub category  -->
+    <div id="popup-modal-subcategory" tabindex="-1"
+    class="bg-black bg-opacity-50 w-screen h-screen hidden overflow-y-auto  overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center  md:inset-0  max-h-full">
+    <div class="relative p-4 w-full max-h-full items-center justify-center flex">
+      <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700 lg:w-[53rem] md:w-3/4 sm:w-full">
+
+        <div class="p-4 md:p-5 text-center">
+          <hr>
+            <!-- Encabezado con gradiente -->
+            <div class="bg-gradient-to-r rounded-lg from-indigo-600 to-purple-600 p-6 text-white mb-3">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center">
+                        <i class="fas fa-list text-2xl mr-3"></i>
+                        <h1 class="text-2xl font-bold">Lista de Sucategorías</h1>
+                    </div>
+                    <div class="bg-white/20 p-2 rounded-full"  data-modal-target="popup-modal-add" (click)="showModalCreateCategoryhija()">
+                        <i class="fas fa-plus text-white">  </i>
+                         <app-madalaction
+                              #soncategory
+                              [msgbody]="'Probar'"
+                              [msgheader]="'Probar header'"
+                            />
+                    </div>
+                </div>
+                <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las subcategoria disponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
+            </div>
+
+              <div class="bg-indigo-600 rounded-lg  p-6 text-white justify-items-center">
+                <div class="flex items-center">
+                  <h1 class="text-2xl font-bold" id="category"></h1>
+                </div>
+              </div>
+
+             <div class=" overflow-hidden">
+                <table class="min-w-full divide-y divide-gray-200">
+                  <!-- Encabezado -->
+                  <thead class="bg-gray-50">
+                    <tr>
+                      <th scope="col"
+                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <div class="flex items-center space-x-1">
+                          <span>Sub categoría</span>
+                        </div>
+                      </th>
+
+                      <th scope="col"
+                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <div class="flex items-center space-x-1">
+                          <span>Descripción</span>
+                        </div>
+                      </th>
+                      <th scope="col"
+                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <div class="flex items-center space-x-1">
+                          <span>Fecha Creación</span>
+                        </div>
+                      </th>
+                      <th scope="col"
+                        class="px-6 py-3 justify-items-center text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <div class="flex items-center space-x-1">
+                          <span>Acciones</span>
+                        </div>
+                      </th>
+                    </tr>
+                  </thead>
+
+                  <!-- Cuerpo -->
+                  <tbody class="bg-white divide-y divide-gray-200">
+                    @for (subcategory of subcategories; track subcategory.Id) {
+                    <tr class="hover:bg-gray-50 transition-colors">
+                      <!-- Nombre -->
+                      <td class="px-6 py-4 whitespace-nowrap">
+                        <div class="flex items-center">
+                          <div class="ml-4">
+                            <div class="text-sm font-medium text-gray-900">
+                              {{ subcategory.Name }}
+                            </div>
+                          </div>
+                        </div>
+                      </td>
+                      <td class="px-6 py-4">
+                        <div class="flex items-center">
+                          <div class="text-sm font-medium text-gray-900">
+                            {{ subcategory.Description }}
+                          </div>
+                        </div>
+                      </td>
+                      <!-- Fecha -->
+                      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                        {{ subcategory.CreatedDate | date:'dd/MM/yyyy' }}
+                      </td>
+
+                      <!-- Acciones -->
+                      <td class="px-6 py-4 text-right text-sm font-medium">
+                        <div class="flex justify-center space-x-2">
+
+                          <button class="text-blue-600 hover:text-blue-900 transition-colors" data-title="Agregar subcategoria"
+                            data-modal-target="popup-modal-subcategory" (click)="showModalCreateCategory(subcategory.Id,'Subcategoría')">
+                            <i class="fa fa-plus" aria-hidden="true"></i>
+                          </button>
+                          <button
+                                class="text-blue-600 hover:text-blue-900 transition-colors"
+                                data-title="Editar"  data-modal-target="popup-modal-category" (click)="showModalCreateCategory(subcategory.Id,'Editar')"
+                              >
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
+                                </svg>
+                              </button>
+                          <button (click)="showAlert(subcategory.Id)" class="text-red-600 hover:text-red-900 transition-colors"
+                            data-title="Eliminar">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                            </svg>
+                          </button>
+                        </div>
+                      </td>
+                    </tr>
+                    }
+                  </tbody>
+                </table>
+            <div
+              class="justify-end p-4 border-t border-gray-200 rounded-b-lg flex items-center space-x-2 dark:border-gray-600">
+              <button (click)="hideModalcategory('popup-modal-subcategory')" data-modal-hide="popup-modal-category" type="button"
+                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+                cancel
+              </button>
+            </div>
+              </div>
+
         </div>
       </div>
     </div>
