--- a/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
+++ b/UIEcomerce/src/app/modules/categories/category-list/category-list.component.html
@@ -204,14 +204,14 @@
                         <i class="fas fa-list text-2xl mr-3"></i>
                         <h1 class="text-2xl font-bold">Lista de Sucategorías</h1>
                     </div>
-                    <div class="bg-white/20 p-2 rounded-full"  data-modal-target="popup-modal-add" (click)="showModalCreateCategoryhija()">
-                        <i class="fas fa-plus text-white">  </i>
-                         <app-madalaction
-                              #soncategory
-                              [msgbody]="'Probar'"
-                              [msgheader]="'Probar header'"
-                            />
-                    </div>
+
+                     <app-madalaction
+                        [msgbody]="msgbody"
+                        [msgheader]="msgheader"
+                        (hidemodalcategory)="hideModalcategory($event)"
+                        (onsubmit)="onAddSubCategory($event)"
+                        (showModal)="showModalCreateSubCategory()"
+                      />
                 </div>
                 <p class="mt-2 text-center  font-bold text-indigo-100">En esta pantalla se va a poder ver todas las subcategoria disponible y manipularlas.(Modificar, eliminar y agregar sub categoria)</p>
             </div>
@@ -257,6 +257,7 @@
 
                   <!-- Cuerpo -->
                   <tbody class="bg-white divide-y divide-gray-200">
+                    <input type="text" id="categoryId" class="hidden">
                     @for (subcategory of subcategories; track subcategory.Id) {
                     <tr class="hover:bg-gray-50 transition-colors">
                       <!-- Nombre -->
