--- a/UIEcomerce/src/app/features/checkout/checkout.component.html
+++ b/UIEcomerce/src/app/features/checkout/checkout.component.html
@@ -24,9 +24,9 @@
           <tbody>
             @for (item of cartStore.products(); track $index) {
             <tr>
-              <td class="px-4 py-3">{{item.title}}</td>
+              <td class="px-4 py-3">{{item.Name}}</td>
               <td class="px-4 py-3">{{item.qty}}</td>
-              <td class="px-4 py-3 text-lg text-gray-900">{{item.price | currency}}</td>
+              <td class="px-4 py-3 text-lg text-gray-900">{{item.lots[0].SalePrice| currency}}</td>
               <td>
                 <button (click)="removeItem(item.Id)"
                   class="flex px-2 text-white bg-orange-500 border-0 rounded focus:outline-none hover:bg-red-600">
