--- a/UIEcomerce/src/app/features/products/details/details.component.html
+++ b/UIEcomerce/src/app/features/products/details/details.component.html
@@ -3,23 +3,23 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap mx-auto lg:w-4/5">
         <img alt="Product name" class="object-cover object-center w-full h-64 rounded lg:w-1/2 lg:h-auto"
-          src="{{product()?.image}}">
+          src="{{product()?.ImageUrl}}">
         <div class="w-full mt-6 lg:w-1/2 lg:pl-10 lg:py-6 lg:mt-0">
-          <h2 class="text-sm tracking-widest text-gray-500 title-font">{{product()?.category}} </h2>
-          <h1 class="mb-1 text-3xl font-medium text-gray-900 title-font">{{product()?.title}}</h1>
+          <h2 class="text-sm tracking-widest text-gray-500 title-font">{{product()?.SubCategory?.Name}} </h2>
+          <h1 class="mb-1 text-3xl font-medium text-gray-900 title-font">{{product()?.Name}}</h1>
           <div class="flex mb-4">
-            <span class="flex items-center"> 
-              @for (item of starsArray; track index; let index = $index) {                   
+            <span class="flex items-center">
+              @for (item of starsArray; track index; let index = $index) {
                 <!-- <span>{{ product()?.rating?.rate }}</span>   -->
                 <span [innerHTML]="generateSVG(index)"></span>
-              }         
-              <span class="ml-3 text-gray-600">{{ product()?.rating?.count }} reviews</span>
+              }
+              <!-- <span class="ml-3 text-gray-600">{{ product()?.rating?.count }} reviews</span> -->
             </span>
           </div>
-          <p class="mt-6 mb-5 leading-relaxed "> {{product()?.description}}</p>
-  
+          <!-- <p class="mt-6 mb-5 leading-relaxed "> {{product()?.description}}</p> -->
+
           <div class="flex">
-            <span class="text-2xl font-bold text-orange-500 "> {{product()?.price | currency}} </span>
+            <!-- <span class="text-2xl font-bold text-orange-500 "> {{product()?.price | currency}} </span> -->
             <button (click)="onAddToCart()"
               class="px-2 py-1 ml-auto text-white bg-orange-500 rounded hover:bg-orange-700">
               Add to cart
